# CASNN

./: .gitignore  LICENSE  README.md
onnxDeploy/: CMakeLists.txt  make_x86.sh  model-test.cpp  run.sh
onnxDeploy/aarch64/: explib.sh  mtest  mtest_log  run.sh
onnxDeploy/aarch64/testloader/: samples_ucihar_1.txt  samples_ucihar_15.txt  samples_ucihar_3.txt  samples_ucihar_5.txt  samples_ucihar_8.txt  samples_ucihar_9.txt  targets_hhar_a.txt  targets_ucihar_1.txt  targets_ucihar_15.txt  targets_ucihar_3.txt  targets_ucihar_5.txt  targets_ucihar_8.txt  targets_ucihar_9.txt
onnxDeploy/aarch64/ucihar_lod/: CASNN#1_ucihar_lr0.0001_bs128_sw30_lod15_tau0.75_thresh0.5.onnx  CASNN#1_ucihar_lr0.0001_bs128_sw30_lod1_tau0.75_thresh0.5.onnx  CASNN#1_ucihar_lr0.0001_bs128_sw30_lod3_tau0.75_thresh0.5.onnx  CASNN#2_ucihar_lr0.0001_bs128_sw30_lod15_tau0.75_thresh0.5.onnx  CASNN#2_ucihar_lr0.0001_bs128_sw30_lod3_tau0.75_thresh0.5.onnx  FCN_ucihar_lr0.0001_bs128_sw30_lod3.onnx  SFCN_ucihar_lr0.0001_bs128_sw30_lod15_tau0.75_thresh0.5.onnx
pytorch/: main.py  run.sh  toonnx.py  trainer.py  utils.py
pytorch/data_preprocess/: data_preprocess_hhar.py  data_preprocess_shar.py  data_preprocess_ucihar.py
pytorch/lif/: build.sh  lif.cpp  setup.py  test.py
pytorch/lif/include/: utils.h
pytorch/lif/lif.egg-info/: PKG-INFO  SOURCES.txt
pytorch/models/: backbones.py  spike.py
pytorch/results/hhar_lod/: FCN_hhar_lr0.001_bs128_sw30_loda.pt  FCN_hhar_lr0.001_bs128_sw30_lodb.pt  FCN_hhar_lr0.001_bs128_sw30_lodc.pt  SFCN_hhar_lr0.001_bs128_sw30_loda_tau0.75_thresh0.5.pt  SFCN_hhar_lr0.001_bs128_sw30_lodb_tau0.75_thresh0.5.pt  SFCN_hhar_lr0.001_bs128_sw30_lodc_tau0.75_thresh0.5.pt
pytorch/results/onnx/hhar_lod/: CASNN#_hhar_lr0.001_bs128_sw30_loda_tau0.75_thresh0.5.onnx  CASNN#_hhar_lr0.001_bs128_sw30_lodb_tau0.75_thresh0.5.onnx  CASNN#_hhar_lr0.001_bs128_sw30_lodc_tau0.75_thresh0.5.onnx  FCN_hhar_lr0.001_bs128_sw30_lodb.onnx  SFCN_hhar_lr0.001_bs128_sw30_lodc_tau0.75_thresh0.5.onnx
pytorch/results/onnx/ucihar_lod/: CASNN#2_ucihar_lr0.0001_bs128_sw30_lod1_tau0.75_thresh0.5.onnx  FCN_ucihar_lr0.0001_bs128_sw30_lod1.onnx  FCN_ucihar_lr0.0001_bs128_sw30_lod15.onnx  SFCN_ucihar_lr0.0001_bs128_sw30_lod1_tau0.75_thresh0.5.onnx  SFCN_ucihar_lr0.0001_bs128_sw30_lod3_tau0.75_thresh0.5.onnx
pytorch/results/randomsettings/: FCN_hhar_lr0.0001_bs128_sw30_casesrandom.pt  FCN_shar_lr0.0001_bs128_sw30_casesrandom.pt  FCN_ucihar_lr0.0001_bs128_sw30_casesrandom.pt  SFCN_hhar_lr0.001_bs128_sw30_casesrandom.pt  SFCN_shar_lr0.001_bs128_sw30_casesrandom.pt  SFCN_ucihar_lr0.001_bs128_sw30_casesrandom.pt
pytorch/results/ucihar_lod/: FCN_ucihar_lr0.0001_bs128_sw30_lod1.pt  FCN_ucihar_lr0.0001_bs128_sw30_lod15.pt  FCN_ucihar_lr0.0001_bs128_sw30_lod3.pt  FCN_ucihar_lr0.0001_bs128_sw30_lod8.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod12_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod15_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod1_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod3_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod5_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod6_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod8_tau0.75_thresh0.5.pt  SFCN_ucihar_lr0.0001_bs128_sw30_lod9_tau0.75_thresh0.5.pt
pytorch/tools/: export_testloader.py  test_runner.py
